completed buildingtypes